@@ -5,7 +5,7 @@
 # Copyright (c) 1998-1999 by Scriptics Corporation.
 # All rights reserved.
 #
-# RCS: @(#) $Id: grid.test,v 1.23 2004/01/09 22:23:26 pspjuth Exp $
+# RCS: @(#) $Id: grid.test,v 1.24 2004/02/18 21:25:42 pspjuth Exp $
 
 package require tcltest 2.1
 eval tcltest::configure $argv
@@ -1375,7 +1375,7 @@ test grid-16.7 {layout weights (shrinking at minsize)} {
 	lappend a [winfo width .$i]-[winfo height .$i]-[winfo ismapped .$i]
     }
     set a
-} {100-75-1 1-1-0 200-150-1}
+} {100-75-1 1-1-0 100-75-1}
 grid_reset 16.7
 
 test grid-16.8 {layout internal constraints} {
@@ -1601,6 +1601,29 @@ test grid-16.16 {layout span} {
 } [list [list 30 34 43 43 0] [list 30 34 48 38 0] [list 22 42 48 38 0] \
            [list 25 39 29 57 0] [list 30 34 22 64 0]]
 grid_reset 16.16
+
+test grid-16.17 {layout weights (shrinking at minsize)} {
+    foreach i {0 1 2 3} {
+    	frame .$i -bg gray  -width 100 -height 75 -bd 2 -relief ridge
+    	grid .$i -row $i -column $i -sticky nswe
+    }
+    grid propagate . 0
+    grid columnconfigure . {0 1} -weight 1 -minsize 0
+    grid rowconfigure . {0 1} -weight 1 -minsize 0
+    set a ""
+    . configure -width 250 -height 200
+    update
+    foreach i {0 1 2 3} {
+	lappend a [winfo width .$i]-[winfo height .$i]-[winfo ismapped .$i]
+    }
+    . configure -width 150 -height 100
+    update
+    foreach i {0 1 2 3} {
+	lappend a [winfo width .$i]-[winfo height .$i]-[winfo ismapped .$i]
+    }
+    set a
+} {25-25-1 25-25-1 100-75-1 100-75-1 25-25-0 25-25-0 100-75-1 100-75-1}
+grid_reset 16.17
 
 test grid-17.1 {forget and pending idle handlers} {
     # This test is intended to detect a crash caused by a failure to remove
